# redpanda-http-example

./: Cargo.toml  README.md  docker-compose.yml
src/: publish.rs  subscribe.rs
