[package]
name = "redpanda-publish"
version = "0.1.0"
edition = "2021"
authors = ["Frank Lyaruu <flyaruu@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
log = "0.4.19"
redpanda-http = "0.0.4"
serde = "1.0.164"
serde_json = "1.0.99"
simple_logger = "4.2.0"
simplehttp = { version="0.0.4", features=["reqwest"] }

[[bin]]
name = "publish"
path = "src/publish.rs"

[[bin]]
name = "subscribe"
path = "src/subscribe.rs"
